@@ -1,3 +1,4 @@
+Build a Fraction: Rotate pie shapes when dragged from toolbox, not when dropped into container
 Build a Fraction: Fixed: Pie shapes should fit into containers in the toolbox
 Build a Fraction: Fixed toolbox height for different shape types
 Build a Fraction: Store progress when pushing back button
